[tool.poetry]
name = "chirps"
version = "0.1.0"
description = "Discover personally identifiable information stored in a vector database"
authors = ["Mantium <support@mantiumai.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-redis = "^1.1.1"
mypy = "^1.3.0"
types-redis = "^4.5.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
