[tool.poetry]
name = "chirps"
version = "0.1.0"
description = "Discover personally identifiable information stored in a vector database"
authors = ["Mantium <support@mantiumai.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-redis = "^1.1.1"
mypy = "^1.3.0"
types-redis = "^4.5.5.2"
numpy = "^1.24.3"
openai = "^0.27.8"
mantium-client = "^0.1.4"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"
aiosqlite = "^0.19.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
alembic = "^1.11.1"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
